--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse project files
+.classpath
+.DS_Store
+.project
+.settings/
+
+# Target folders
+*/target/*
