--- a/customer-mobile-app-simulator/pom.xml
+++ b/customer-mobile-app-simulator/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.gottaeat</groupId>
     <artifactId>GottaEat</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}</version>
   </parent>
   
   <artifactId>customer-mobile-app-simulator</artifactId>
