--- a/order-validation-service/pom.xml
+++ b/order-validation-service/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.gottaeat</groupId>
     <artifactId>GottaEat</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}</version>
   </parent>
   
   <artifactId>order-validation-service</artifactId>
