--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>GottaEat</artifactId>
   <packaging>pom</packaging>
   <name>GottaEat :: Parent</name>
-  <version>1.0.0</version>
+  <version>${revision}</version>
 
     <properties>
         <revision>1.0.0</revision>
