--- a/resilience/pom.xml
+++ b/resilience/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.gottaeat</groupId>
     <artifactId>GottaEat</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}</version>
   </parent>
   
   <artifactId>resilience</artifactId>
