--- a/geo-encoding/pom.xml
+++ b/geo-encoding/pom.xml
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>com.gottaeat</groupId>
     		<artifactId>domain-schema</artifactId>
-    		<version>${revision}</version>
+    		<version>${project.version}</version>
 		</dependency>
 		
 		<dependency>
