--- a/order-solicitation-service/pom.xml
+++ b/order-solicitation-service/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.gottaeat</groupId>
     		<artifactId>domain-schema</artifactId>
-    		<version>${revision}</version>
+    		<version>${project.version}</version>
 		</dependency>
 		
 		<dependency>
