--- a/resilience/pom.xml
+++ b/resilience/pom.xml
@@ -10,10 +10,6 @@
   <artifactId>resilience</artifactId>
   <name>GottaEat :: Resilience</name>
   
-  <properties>
-  	<resilience4j.version>1.3.1</resilience4j.version>
-  </properties>
-  
   <build>
 		<plugins>
 			<plugin>
@@ -41,7 +37,7 @@
 		<dependency>
 			<groupId>com.gottaeat</groupId>
     		<artifactId>domain-schema</artifactId>
-    		<version>${revision}</version>
+    		<version>${project.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -53,13 +49,13 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.10</version>
+			<version>${httpclient.version}</version>
 		</dependency>
 		
 		<dependency>
     		<groupId>com.squareup.okhttp3</groupId>
     		<artifactId>okhttp</artifactId>
-    		<version>4.5.0</version>
+    		<version>${okhttp.version}</version>
 		</dependency>
 		
 	</dependencies>
