--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
       <module>payment-service</module>
       <module>paypal-authorization-service</module>
       <module>resilience</module>
+      <module>docker-image</module>
     </modules>
     
     <dependencies>
