Added database schemas and sample data

--- a/docker-image/src/main/docker/database/Dockerfile
+++ b/docker-image/src/main/docker/database/Dockerfile
@@ -1,11 +1,11 @@
-FROM mariadb:latest
 
-ENV MYSQL_ROOT_PASSWORD=Super$3cR3t
+FROM mysql:latest
+
+
 ENV MYSQL_DATABASE=GottaEat
+ENV MYSQL_ROOT_PASSWORD=Super$3cR3t
 ENV MYSQL_USER=orbit
 ENV MYSQL_PASSWORD=orbit
 
-RUN mkdir -p /tmp/psql_data/
+COPY schemas/setup.sql /docker-entrypoint-initdb.d/
 
-COPY schemas/customer.sql /docker-entrypoint-initdb.d/
-COPY schemas/order-history.sql /docker-entrypoint-initdb.d/
