--- a/customer-details-lookup/pom.xml
+++ b/customer-details-lookup/pom.xml
@@ -11,21 +11,41 @@
   <artifactId>customer-details-lookup</artifactId>
   <name>GottaEat :: Customer Details Lookup</name>
   
-    <build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.nifi</groupId>
-				<artifactId>nifi-nar-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+  <build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.nifi</groupId>
+			<artifactId>nifi-nar-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-resources-plugin</artifactId>
+		</plugin>
+	</plugins>
+  </build>
+	
+  <dependencies>
+  	 <dependency>
+		<groupId>com.gottaeat</groupId>
+    	<artifactId>domain-schema</artifactId>
+    	<version>${project.version}</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.gottaeat</groupId>
+		<artifactId>fraud-scoring</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.22</version>
+    </dependency>
+  </dependencies>
     
 </project>
