--- a/fraud-scoring/pom.xml
+++ b/fraud-scoring/pom.xml
@@ -12,6 +12,23 @@
   
   <build>
     <plugins>
+	 <plugin>
+		<groupId>org.apache.avro</groupId>
+		<artifactId>avro-maven-plugin</artifactId>
+		<version>1.9.1</version>
+		<executions>
+			<execution>
+             <phase>generate-sources</phase>
+             <goals>
+                <goal>idl-protocol</goal>
+             </goals>
+             <configuration>
+                <sourceDirectory>${project.basedir}/src/main/resources/schema</sourceDirectory>
+                <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+             </configuration>
+            </execution>
+	  </executions>
+	</plugin>
 	  <plugin>
 		<groupId>org.apache.nifi</groupId>
 		<artifactId>nifi-nar-maven-plugin</artifactId>
@@ -26,5 +43,27 @@
 	</plugin>
    </plugins>
   </build>
+  
+  <dependencies>
+  
+  	<dependency>
+  		<groupId>org.apache.avro</groupId>
+  		<artifactId>avro</artifactId>
+  		<version>1.9.2</version>
+  	</dependency>
+  	
+  	<dependency>
+    	<groupId>com.fraudlabspro</groupId>
+    	<artifactId>fraudlabspro-java</artifactId>
+    	<version>3.1.0</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+	</dependency>
+
+  </dependencies>
 	
 </project>
