--- a/docker-image/src/main/docker/microservices/service-configs/fraud-scoring-service.yml
+++ b/docker-image/src/main/docker/microservices/service-configs/fraud-scoring-service.yml
@@ -1,22 +1,22 @@
-className: com.gottaeat.services.payment.creditcard.CreditCardAuthorizationService
+className: com.gottaeat.services.fraud.scoring.fraudlabs.FraudScoringService
 tenant: gottaeat
 namespace: payments
-name: credit-card-auth-service
+name: fraud-scoring-service
 inputs:
-- persistent://gottaeat/orders/validated-orders
-output: persistent://gottaeat/payments/authorized
-userConfig: 
-
+- persistent://gottaeat/
+output: persistent://gottaeat/
+userConfig:
+  - apiKey: YOUR_KEY 
 
 ##################################
 # Processing 
 ##################################
 autoAck: true
-logTopic: persistent://gottaeat/payments/credit-card-auth-service-log
+logTopic: persistent://gottaeat/services/fraud-scoring-service-log
 processingGuarantees: ATLEAST_ONCE
 retainOrdering: false
 timeoutMs: 30000
-subName: credit-card-auth-service-sub
+subName: fraud-scoring-service-sub
 cleanupSubscription: true
 
 ##################################
