--- a/customer-details-lookup/pom.xml
+++ b/customer-details-lookup/pom.xml
@@ -46,6 +46,14 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>8.0.22</version>
     </dependency>
+    
+    <dependency>
+   		<groupId>org.apache.pulsar</groupId>
+   		<artifactId>pulsar-functions-local-runner-original</artifactId>
+   		<version>${pulsar.version}</version>
+   		<scope>test</scope>
+	</dependency>
+	
   </dependencies>
     
 </project>
