--- a/customer-details-lookup/pom.xml
+++ b/customer-details-lookup/pom.xml
@@ -54,6 +54,12 @@
    		<scope>test</scope>
 	</dependency>
 	
+	<dependency>
+      <groupId>io.netty</groupId>
+      <version>4.1.54.Final</version>
+      <artifactId>netty-codec-dns</artifactId>
+	</dependency>
+	
   </dependencies>
     
 </project>
