--- a/fraud-scoring/pom.xml
+++ b/fraud-scoring/pom.xml
@@ -52,6 +52,19 @@
     	<artifactId>json-simple</artifactId>
     	<version>1.1.1</version>
 	</dependency>
+	
+	<dependency>
+   		<groupId>org.apache.pulsar</groupId>
+   		<artifactId>pulsar-functions-local-runner-original</artifactId>
+   		<version>${pulsar.version}</version>
+   		<scope>test</scope>
+	</dependency>
+	
+	<dependency>
+      <groupId>io.netty</groupId>
+      <version>4.1.54.Final</version>
+      <artifactId>netty-codec-dns</artifactId>
+	</dependency>
 
   </dependencies>
 	
