--- a/fraud-scoring/pom.xml
+++ b/fraud-scoring/pom.xml
@@ -48,6 +48,18 @@
     </dependency>
     
     <dependency>
+  		<groupId>com.squareup.okhttp3</groupId>
+  		<artifactId>okhttp</artifactId>
+  		<version>4.9.0</version>
+	</dependency>
+    
+    <dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>20.0</version>
+	</dependency>
+
+    <dependency>
     	<groupId>com.googlecode.json-simple</groupId>
     	<artifactId>json-simple</artifactId>
     	<version>1.1.1</version>
