Added location tracking service

--- a/docker-image/pom.xml
+++ b/docker-image/pom.xml
@@ -96,6 +96,12 @@
      
      <dependency>
          <groupId>${parent.groupId}</groupId>
+         <artifactId>location-tracking</artifactId>
+         <version>${parent.version}</version>
+     </dependency>
+     
+     <dependency>
+         <groupId>${parent.groupId}</groupId>
          <artifactId>order-solicitation-service</artifactId>
          <version>${parent.version}</version>
      </dependency>
