--- a/fraud-detection/pom.xml
+++ b/fraud-detection/pom.xml
@@ -35,6 +35,12 @@
 	</dependency>
 	
 	<dependency>
+		<groupId>com.gottaeat</groupId>
+    	<artifactId>fraud-scoring</artifactId>
+    	<version>${project.version}</version>
+	</dependency>
+	
+	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-core</artifactId>
 		<version>2.23.4</version>
