--- a/location-tracking-service/pom.xml
+++ b/location-tracking-service/pom.xml
@@ -35,6 +35,12 @@
     	<version>${project.version}</version>
 	</dependency>
 	
+	<dependency>
+    	<groupId>org.apache.ignite</groupId>
+    	<artifactId>ignite-core</artifactId>
+    	<version>${ignite.version}</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
