--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         
         <httpclient.version>4.5.10</httpclient.version>
+        <ignite.version>2.9.0</ignite.version>
         <junit.version>4.13.1</junit.version>
         <lombok.version>1.18.4</lombok.version>
         <lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
