Added LocalRunner Tests

--- a/domain-schema/pom.xml
+++ b/domain-schema/pom.xml
@@ -13,10 +13,15 @@
   <build>
    <plugins>
    
+     <plugin>
+     	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-clean-plugin</artifactId>
+    </plugin>
+   
 	 <plugin>
 		<groupId>org.apache.avro</groupId>
 		<artifactId>avro-maven-plugin</artifactId>
-		<version>1.9.1</version>
+		<version>${avro-maven-plugin.version}</version>
 		<executions>
 			<execution>
 			   <id>order</id>
