--- a/customer-details-lookup/pom.xml
+++ b/customer-details-lookup/pom.xml
@@ -44,7 +44,7 @@
 	<dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
-    	<version>8.0.22</version>
+    	<version>${mysql.version}</version>
     </dependency>
     
     <dependency>
