--- a/device-validation-service/pom.xml
+++ b/device-validation-service/pom.xml
@@ -1,29 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
   <parent>
     <groupId>com.gottaeat</groupId>
     <artifactId>GottaEat</artifactId>
     <version>${revision}</version>
   </parent>
+  <artifactId>device-validation-service</artifactId>
+  <name>GottaEat :: Device Verification Service</name>
   
-  <artifactId>location-tracking-service</artifactId>
-  <name>GottaEat :: Location Tracking Service</name>
-  
-  <build>
+    <build>
     <plugins>
 	  <plugin>
 		<groupId>org.apache.nifi</groupId>
 		<artifactId>nifi-nar-maven-plugin</artifactId>
-	</plugin>
-	<plugin>
+	  </plugin>
+	  <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
-	</plugin>
-	<plugin>
+	  </plugin>
+	  <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-resources-plugin</artifactId>
-	</plugin>
+	  </plugin>
    </plugins>
   </build>
   
@@ -36,17 +34,11 @@
 	</dependency>
 	
 	<dependency>
-    	<groupId>org.apache.ignite</groupId>
-    	<artifactId>ignite-core</artifactId>
-    	<version>${ignite.version}</version>
-	</dependency>
-	
-	<dependency>
-  		<groupId>org.apache.ignite</groupId>
-  		<artifactId>ignite-spring</artifactId>
-  		<version>${ignite.version}</version>
-	</dependency>
-	
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>${mysql.version}</version>
+    </dependency>
+    
     <dependency>
    		<groupId>org.apache.pulsar</groupId>
    		<artifactId>pulsar-functions-local-runner-original</artifactId>
@@ -54,12 +46,12 @@
    		<scope>test</scope>
 	</dependency>
 	
-    <dependency>
-    	<groupId>io.netty</groupId>
-    	<version>4.1.54.Final</version>
-    	<artifactId>netty-codec-dns</artifactId>
+	<dependency>
+      <groupId>io.netty</groupId>
+      <version>4.1.54.Final</version>
+      <artifactId>netty-codec-dns</artifactId>
 	</dependency>
 	
-  </dependencies>
-  
+ </dependencies>
+ 
 </project>
