--- a/docker-compose/gotta-eat-application/docker-compose.yml
+++ b/docker-compose/gotta-eat-application/docker-compose.yml
@@ -1,19 +1,7 @@
 version: '2'
 
 services:
-  vault:
-    image: vault
-    hostname: vault.gottaeat.com
-    container_name: vault
-    ports:
-      - "8200:8200"
-    environment:
-      - VAULT_DEV_ROOT_TOKEN_ID=myroot
-      - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
-      - VAULT_ADDR=http://0.0.0.0:8200
-    cap_add:
-      - IPC_LOCK
-
+ 
   mysql_database:
     image: pia/gotta-eat-db:latest
     hostname: db.gottaeat.com
@@ -35,9 +23,11 @@ services:
   pulsar:
     depends_on:
       - mysql_database
+      - ignite
     image: pia/gotta-eat:latest
     hostname: pulsar.gottaeat.com
     container_name: pulsar
     ports:
       - "8080:8080"
       - "6650:6650"
+      - "4181:4181"
