--- a/domain-schema/pom.xml
+++ b/domain-schema/pom.xml
@@ -11,14 +11,8 @@
   <name>GottaEat :: Domain Schema</name>
   
   <build>
-   <plugins>
-   
-     <plugin>
-     	<groupId>org.apache.maven.plugins</groupId>
-    	<artifactId>maven-clean-plugin</artifactId>
-    </plugin>
-   
-	 <plugin>
+     <plugins>
+	   <plugin>
 		<groupId>org.apache.avro</groupId>
 		<artifactId>avro-maven-plugin</artifactId>
 		<version>${avro-maven-plugin.version}</version>
@@ -62,28 +56,55 @@
                   <outputDirectory>target/generated-sources/proto</outputDirectory>
                </configuration>
             </execution>
-	  </executions>
-	</plugin>
+	    </executions>
+	  </plugin>
 	
-	<plugin>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-compiler-plugin</artifactId>
-	</plugin>
+	  <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.1.1</version>
+
+        <configuration>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+        </configuration>
+
+        <executions>
+            <execution>
+                <id>make-assembly</id>
+                <phase>package</phase>
+                <goals>
+                    <goal>single</goal>
+                </goals>
+            </execution>
+        </executions>
+
+      </plugin>
+    
+      <plugin>
+     	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-clean-plugin</artifactId>
+      </plugin>
+   
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-compiler-plugin</artifactId>
+	  </plugin>
 	
-	<plugin>
+	  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-    </plugin>
-  </plugins>
-</build>
-  
+      </plugin>
+    </plugins>
+  </build>
   
   <dependencies>
   
 	<dependency>
   		<groupId>org.apache.avro</groupId>
   		<artifactId>avro</artifactId>
-  		<version>1.9.2</version>
+  		<version>1.9.1</version>
   	</dependency>
   	
   </dependencies>
