--- a/fraud-scoring/pom.xml
+++ b/fraud-scoring/pom.xml
@@ -60,7 +60,7 @@
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
-		<version>1.18.4</version>
+		<version>${lombok.version}</version>
 	</dependency>
 	
 	<dependency>
