--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,14 @@
 			<groupId>org.apache.pulsar</groupId>
 			<artifactId>pulsar-client</artifactId>
 			<version>${pulsar.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.pulsar</groupId>
 			<artifactId>pulsar-functions-api</artifactId>
 			<version>${pulsar.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		
         <dependency>
