--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
       <module>cache-lookup</module>
       <module>credit-card-authorization-service</module>
       <module>customer-mobile-app-simulator</module>
-      <module>customer-details-lookup</module>
       <module>customer-features-lookup</module>
       <module>device-validation-service</module>
       <module>domain-schema</module>
@@ -48,6 +47,8 @@
       <module>paypal-authorization-service</module>
       <module>resilience</module>
       <module>restaurant-features-lookup</module>
+      <module>SMS-verification</module>
+      <module>user-details-lookup</module>
       <module>docker-image</module>
     </modules>
     
