--- a/domain-schema/pom.xml
+++ b/domain-schema/pom.xml
@@ -80,6 +80,22 @@
                   <outputDirectory>target/generated-sources/proto</outputDirectory>
                </configuration>
             </execution>
+            
+            <execution>
+		    	<id>sms-validation</id>
+               	<phase>generate-sources</phase>
+               	<goals>
+                  <goal>idl-protocol</goal>
+               	</goals>
+               	<configuration>
+                  <includes>
+                  	<include>**/sms-verification.avdl</include>
+                  </includes>
+                  <sourceDirectory>${project.basedir}/src/main/resources/avro/com/gottaeat/security/authentication/sms/verification</sourceDirectory>
+                  <outputDirectory>target/generated-sources/proto</outputDirectory>
+               	</configuration>
+           	</execution>
+           	
 	    </executions>
 	  </plugin>
 	
