Added grid tracking service module

--- a/docker-image/pom.xml
+++ b/docker-image/pom.xml
@@ -124,6 +124,12 @@
      
      <dependency>
          <groupId>${parent.groupId}</groupId>
+         <artifactId>grid-tracking-service</artifactId>
+         <version>${parent.version}</version>
+     </dependency>
+     
+     <dependency>
+         <groupId>${parent.groupId}</groupId>
          <artifactId>location-tracking-service</artifactId>
          <version>${parent.version}</version>
      </dependency>
